# trab-final-class-e-pesq-de-dados

./: .gitignore  CMakeLists.txt  README.md
inc/: banco-de-avaliacoes.h  banco-de-jogadores.h  banco-de-nomes.h  banco-de-posicoes.h  banco-de-tags.h  leitor-csv.h  ordena.h  tipos.h  typedefs.h
src/: CMakeLists.txt  banco-de-avaliacoes.cc  banco-de-jogadores.cc  banco-de-nomes.cc  banco-de-posicoes.cc  banco-de-tags.cc  leitor-csv.cc  programa.cc
test/: CMakeLists.txt
test/banco-de-avaliacoes/: CMakeLists.txt  teste-banco-avaliacoes.cc
test/banco-de-jogadores/: CMakeLists.txt  teste-de-estresse.cc  teste-funcionalidades.cc
test/banco-de-nomes/: CMakeLists.txt  teste-de-funcionalidades.cc
test/banco-de-posicoes/: CMakeLists.txt  teste-posicoes.cc
test/banco-de-tags/: CMakeLists.txt  teste-banco-tags.cc
test/leitor-csv/: CMakeLists.txt  arquivo-teste.csv  teste-funcionalidades.cc
test/ordena/: CMakeLists.txt  teste-ordena.cc
